--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url(../vendor/normalize.css);
+@import url(../vendor/fonts/inter/inter.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/page/page.css);
@@ -8,5 +9,4 @@
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/place/place.css);
 @import url(../blocks/places/places.css);
-@import url(../fonts/inter/inter.css);
 @import url(../blocks/content/content.css);
