--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -5,3 +5,8 @@
     background-color: #2A2C2F;
     opacity: 0.3;
 }
+
+.cover:hover .cover__overlay {
+    background-color: #2A2C2F;
+    opacity: 0.8;
+}
