--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,6 +2,9 @@
     display: grid;
     grid-template-columns: repeat(5, auto);
     grid-gap: 18px;
+    margin: 0;
+    list-style-type: none;
+    padding: 0;
 }
 
 @media (max-width: 767px) {
