--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,9 +1,9 @@
-@import url(_inactive/header__link_inactive.css);
-
 .header__lang-link {
     color: #FFFFFF;
     font-size: 24px;
     line-height: 28px;
+    margin: 0 9px;
+    text-decoration: none;
 }
 
 .header__lang-link:hover {
