--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -1,13 +1,12 @@
 .header__links {
-    width: 77px;
+    list-style-type: none;
     display: flex;
-    justify-content: space-between;
-    margin-top: 18px;
+    margin: 18px 0 0 0;
+    padding: 0;
 }
 
 @media (max-width: 767px) {
     .header__links {
         margin-top: 14px;
-        width: 62px;
     }
 }
