--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,12 @@
 @import url(__lang-link/header__lang-link.css);
+@import url(__lang-link/_active/header__link_active.css);
 @import url(__logo/header__logo.css);
 @import url(__links/header__links.css);
 
 .header {
     display: flex;
     justify-content: space-between;
-    height: 52px;
+    min-height: 52px;
     margin-bottom: 56px;
     width: 100%;
 }
