--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
     padding: 28px 48px 24px;
     background-color: #2A2C2F;
-    font-family: inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     display: flex;
     align-items: center;
     flex-direction: column;
