--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -23,6 +23,6 @@
 @media (max-width: 767px) {
     .intro {
         max-width: 288px;
-        padding: 64px 0 64px 12px;
+        padding: 64px 0 64px 0;
     }
 }
