--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -13,3 +13,9 @@
         padding-right: 24px;
     }
 }
+@media (max-width: 767px) {
+    .page {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+}
