--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -8,16 +8,16 @@
 
 @media (max-width: 1279px) {
     .content {
-        max-width: 928px;
+        min-width: 928px;
     }
 }
 @media (max-width: 1023px) {
     .content {
-        max-width: 768px;
+        min-width: 768px;
     }
 }
 @media (max-width: 767px) {
     .content {
-        max-width: 320px;
+        min-width: 320px;
     }
 }
