--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -11,13 +11,9 @@
     align-items: center;
 }
 
-@media (max-width: 1279px) {
-    .lead {
-        min-width: 928px;
-    }
-}
 @media (max-width: 1023px) {
     .lead {
+        max-width: 928px;
         min-width: 768px;
     }
 }
