--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,7 +1,7 @@
 .place__link {
     color: #FFFFFF;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 122%;
 }
 
 .place__link:hover {
