--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,7 @@
 .cover__subtitle {
     color: #FFFFFF;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 122%;
     margin: 0;
     max-width: 360px;
     text-align: center;
