--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,12 +1,13 @@
 .footer__copyright {
     color: #ffffff;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 114%;
     margin: 0;
 }
 
 @media (max-width: 767px) {
     .footer__copyright {
         margin-top: 48px;
+        line-height: 100%;
     }
 }
