--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,7 +1,7 @@
 .footer__link {
     color: #FFFFFF;
     font-size: 16px;
-    line-height: 18px;
+    line-height: 112%;
     text-decoration-line: none;
 }
 
@@ -12,6 +12,6 @@
 @media (max-width: 767px) {
     .footer__link {
         font-size: 24px;
-        line-height: 24px;
+        line-height: 100%;
     }
 }
