--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -3,7 +3,7 @@
     list-style-type: none;
     font-weight: bold;
     font-size: 12px;
-    line-height: 18px;
+    line-height: 150%;
     padding: 0;
     margin: 0;
 }
