--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,7 @@
 .intro__title {
     color: #FFFFFF;
     font-size: 54px;
-    line-height: 58px;
+    line-height: 107%;
     margin: 0 0 40px;
     font-weight: 900;
 }
