--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,6 @@
 .lead__caption {
     font-size: 10px;
-    line-height: 14px;
+    line-height: 140%;
     color: #FFFFFF;
     align-self: flex-start;
     letter-spacing: 0.15em;
