--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,7 @@
 .lead__subtitle {
     color: #FFFFFF;
     font-size: 30px;
-    line-height: 36px;
+    line-height: 120%;
     text-align: center;
     margin: 0 0 64px;
     max-width: 640px;
@@ -15,7 +15,7 @@
 @media (max-width: 767px) {
     .lead__subtitle {
         font-size: 16px;
-        line-height: 20px;
+        line-height: 125%;
         margin-bottom: 40px;
     }
 }
