--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,7 @@
 .lead__title {
     color: #FFFFFF;
     font-size: 96px;
-    line-height: 100px;
+    line-height: 104%;
     margin: 0 0 32px;
     text-align: center;
     max-width: 720px;
@@ -11,7 +11,7 @@
 @media (max-width: 767px) {
     .lead__title {
         font-size: 40px;
-        line-height: 44px;
+        line-height: 110%;
         margin: 0 0 16px;
     }
 }
