--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,7 @@
 .place__title {
     color: #FFFFFF;
     font-size: 72px;
-    line-height: 76px;
+    line-height: 106%;
     margin: 0;
     align-self: flex-end;
     font-weight: 900;
@@ -10,13 +10,13 @@
 @media (max-width: 1023px) {
     .place__title {
         font-size: 42px;
-        line-height: 46px;
+        line-height: 110%;
     }
 }
 @media (max-width: 767px) {
     .place__title {
         font-size: 32px;
-        line-height: 35px;
+        line-height: 109%;
         margin: 0 16px;
     }
 }
