--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -2,6 +2,6 @@
     letter-spacing: 0.2em;
     color: #AAAAAA;
     font-size: 12px;
-    line-height: 12px;
+    line-height: 170%;
     margin: 0 0 12px;
 }
