--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -9,6 +9,7 @@
     min-height: 740px;
     background-image: url(../../images/cover-trains.jpg);
     background-size: 100% 100%;
+    object-fit: contain;
     display: flex;
     flex-direction: column;
     align-items: center;
