--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -10,11 +10,11 @@
     padding: 92px 0 92px 100px;
 }
 
-/* @media (max-width: 1279px) {
+@media (max-width: 1279px) {
     .intro {
         padding-left: 0;
     }
-} */
+}
 @media (max-width: 1023px) {
     .intro {
         max-width: 720px;
