--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,18 +1,20 @@
 .cover__subtitle {
-    color: #FFFFFF;
     font-size: 18px;
     line-height: 122%;
     margin: 0;
     max-width: 360px;
     text-align: center;
-    z-index: 1;
-    text-decoration: none;
 }
 
 @media (max-width: 767px) {
     .cover__subtitle {
+        font-size: 16px;
+        margin: 0 16px;
+    }
+}
+@media (max-width: 480px) {
+    .cover__subtitle {
         font-size: 14px;
         line-height: 114%;
-        margin: 0 16px;
     }
 }
