--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,20 +1,23 @@
 .cover__title {
-    color: #FFFFFF;
     font-size: 72px;
     line-height: 106%;
     margin: 0 0 32px;
-    z-index: 1;
     max-width: 560px;
-    text-align: center;
     font-weight: 900;
-    text-decoration: none;
+    text-align: center;
 }
 
 @media (max-width: 767px) {
     .cover__title {
+        font-size: 52px;
+        margin: 0 35px 16px;
+        max-width: 410px;
+    }
+}
+@media (max-width: 480px) {
+    .cover__title {
         font-size: 32px;
         line-height: 109%;
-        margin: 0 35px 16px;
-
+        max-width: 250px;
     }
 }
