--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,7 @@
 @import url(__title/cover__title.css);
 @import url(__overlay/cover__overlay.css);
 @import url(__subtitle/cover__subtitle.css);
+@import url(__content/cover__content.css);
 
 .cover {
     margin-bottom: 92px;
@@ -9,32 +10,33 @@
     min-height: 740px;
     background-image: url(../../images/cover-trains.jpg);
     background-size: 100% 100%;
-    object-fit: contain;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     position: relative;
     z-index: 5;
+    display: flex;
+    flex-direction: column;
 }
 
 @media (max-width: 1279px) {
     .cover {
-        max-width: 1024px;
+        min-width: 1024px;
         min-height: 640px;
     }
 }
 @media (max-width: 1023px) {
     .cover {
-        width: 100%;
-        max-width: 768px;
+        min-width: 768px;
         min-height: 480px;
     }
 }
 @media (max-width: 767px) {
     .cover {
         min-width: 320px;
-        min-height: 200px;
+        min-height: 400px;
         margin-bottom: 64px;
+    }
+}
+@media (max-width: 480px) {
+    .cover {
+        min-height: 200px;
     }
 }
