--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,23 @@
 .intro__text {
+    max-width: 690px;
     color: #FFFFFF;
     font-size: 16px;
     line-height: 163%;
     margin: 0 0 32px;
+}
+
+@media (max-width: 1023px) {
+    .intro__text {
+        max-width: 720px;
+    }
+}
+@media (max-width: 767px) {
+    .intro__text {
+        max-width: 488px;
+    }
+}
+@media (max-width: 480px) {
+    .intro__text {
+        max-width: 288px;
+    }
 }
