--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,9 +6,21 @@
     font-weight: 900;
 }
 
+@media (max-width: 1023px) {
+    .intro__title {
+        max-width: 720px;
+    }
+}
 @media (max-width: 767px) {
     .intro__title {
+        max-width: 488px;
+        font-size: 42px;
+    }
+}
+@media (max-width: 480px) {
+    .intro__title {
+        max-width: 248px;
         font-size: 32px;
-        line-height: 35px;
+        line-height: 109%;
     }
 }
