--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,26 +4,22 @@
 @import url(__span-accent/intro__span-accent.css);
 
 .intro {
-    align-self: flex-start;
     width: 100%;
-    max-width: 690px;
-    padding: 92px 0 92px 100px;
+    max-width: 984px;
+    padding: 92px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-sizing: border-box;
 }
 
-@media (max-width: 1279px) {
-    .intro {
-        padding-left: 0;
-    }
-}
 @media (max-width: 1023px) {
     .intro {
-        max-width: 720px;
-        padding: 88px 0 88px 24px;
+        padding: 88px 24px;
     }
 }
 @media (max-width: 767px) {
     .intro {
-        max-width: 288px;
-        padding: 64px 0 64px 0;
+        padding: 64px 16px;
     }
 }
